feat: Implement API get all tags
